# Zircolite-Rules

./: .gitignore  .gitmodules  .pdm-python  .pdm.toml  README.md  README.md.back  Readme.md  gen_ruleset.py  pyproject.toml  rules_linux.json  rules_windows_generic.json  rules_windows_generic_full.json  rules_windows_generic_high.json  rules_windows_generic_medium.json  rules_windows_generic_pysigma.json  rules_windows_sysmon.json  rules_windows_sysmon_full.json  rules_windows_sysmon_high.json  rules_windows_sysmon_medium.json  rules_windows_sysmon_pysigma.json
.github/workflows/: Update.yml
