[project]
name = "Zircolite-Rules"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "", email = ""},
]
dependencies = [
    "requests>=2.32.3",
    "urllib3>=2.2.3",
    "progressbar2>=4.5.0",
    "pymisp>=2.5.0",
    "PyYAML>=6.0.2",
    "ruamel-yaml>=0.18.6",
    "termcolor>=2.5.0",
    "pysigma>=0.11.14",
    "pysigma-pipeline-sysmon>=1.0.4",
    "pysigma-pipeline-windows>=1.2.0",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
