[project]
name = "Zircolite-Rules"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "", email = ""},
]
dependencies = ["requests>=2.32.5", "urllib3>=2.6.1", "progressbar2>=4.5.0", "pymisp>=2.5.17.3", "PyYAML>=6.0.3", "ruamel-yaml>=0.18.16", "termcolor>=3.2.0", "pysigma>=1.0.2", "pysigma-pipeline-sysmon>=2.0.0", "pysigma-pipeline-windows>=2.0.0"]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
